# anote

./: .gitignore  .notesgeneral  .notesgeral  Cargo.toml  Makefile  README.md  TODO  anote  anote-cli.1  anote.1  anote.sh  config.mk  list.c  list.h  main.c  notes.c  notes.h
src/: Notes.rs  Tags.rs  anote.h  cli.c  cli.h  cli.rs  config.def.h  config.rs  constants.rs  fileio.rs  keys.h  list.c  list.h  main.c  main.h  main.rs  note.c  note.h  notes.c  notes.h  notes.rs  prompt.c  prompt.h  sidewin.c  sidewin.h  tag.c  tag.h  tags.c  tags.h  tags.rs  utils.c  utils.h
